--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <h1>Quizzes</h1>
     <h2>Are an accurate metric of understanding</h2>
     <h3>how well someone can pick random numbers</h3>
+    <button id="start">Start HTML Quiz</button>
   </header>
 
   <main>
     <nav id="sidebar">
       <h2>Quiz Types</h2>
-      <ul>
+      <ul id="quiz-select">
         <li class="quiz-type">HTML</li>
         <li class="quiz-type">CSS</li>
         <li class="quiz-type">JS</li>
@@ -33,6 +34,9 @@
         <li class="answer"><button>何？</button></li>
         <li class="answer"><button>誰だ？</button></li>
       </ol>
+      <div id="cover-page">
+        <h3>少々お待ちください</h3>
+      </div>
     </section>
     <section id="scoreboard">
       <h2>Score</h2>
@@ -41,6 +45,10 @@
       <p id="skips">Skips: </p>
       <br>
       <p id="high-score">High Score: </p>
+      <div>
+        <h2 id="timer">Time:</h2>
+      </div>
+
     </section>
 
   </main>
