Added cover sheet for before and after quiz results, added list of missed questions.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <main>
-    <nav id="sidebar">
+    <nav class="card" id="sidebar">
       <h2>Quiz Types</h2>
       <ul id="quiz-select">
         <li class="quiz-type">HTML</li>
@@ -24,21 +24,23 @@
         <li class="quiz-type">Memes</li>
       </ul>
     </nav>
-    <section id="playarea">
+    <section class="card" id="playarea">
       <h2 id="q-number">Question 1:</h2>
       <h3 id="question">私は元気ですか？</h3>
-
       <ol id="answer-list">
         <li class="answer"><button>元気そうです</button></li>
         <li class="answer"><button>お前はもう死んでいる</button></li>
         <li class="answer"><button>何？</button></li>
         <li class="answer"><button>誰だ？</button></li>
       </ol>
-      <div id="cover-page">
+      <div class="card" id="cover-page">
         <h3>少々お待ちください</h3>
+        <br>
+        <p></p>
+        <ul id="missed"></ul>
       </div>
     </section>
-    <section id="scoreboard">
+    <section class="card" id="scoreboard">
       <h2>Score</h2>
       <p id="correct">Correct: </p>
       <p id="wrong">Wrong: </p>
