Fixed formatting for cards, and added additional displays on the inter-quiz cover page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <section class="card" id="playarea">
       <h2 id="q-number">Question 1:</h2>
       <h3 id="question">私は元気ですか？</h3>
+      <br>
       <ol id="answer-list">
         <li class="answer"><button>元気そうです</button></li>
         <li class="answer"><button>お前はもう死んでいる</button></li>
@@ -34,7 +35,7 @@
         <li class="answer"><button>誰だ？</button></li>
       </ol>
       <div class="card" id="cover-page">
-        <h3>少々お待ちください</h3>
+        <h2>少々お待ちください</h2>
         <br>
         <p></p>
         <ul id="missed"></ul>
@@ -47,9 +48,10 @@
       <p id="skips">Skips: </p>
       <br>
       <p id="high-score">High Score: </p>
-      <div>
-        <h2 id="timer">Time:</h2>
-      </div>
+      <br>
+      <h2>Time:</h2>
+      <p id="timer"></p>
+      
 
     </section>
 
