Adding questions for JS and CSS quiz options.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-
+  
   <header>
     <h1>Quizzes</h1>
     <h2>Are an accurate metric of understanding</h2>
@@ -18,10 +18,10 @@
     <nav class="card" id="sidebar">
       <h2>Quiz Types</h2>
       <ul id="quiz-select">
-        <li class="quiz-type">HTML</li>
-        <li class="quiz-type">CSS</li>
-        <li class="quiz-type">JS</li>
-        <li class="quiz-type">Memes</li>
+        <li class="quiz-type" id="html-select">HTML</li>
+        <li class="quiz-type" id="css-select">CSS</li>
+        <li class="quiz-type" id="js-select">JS</li>
+        <!-- <li class="quiz-type" id="meme-select">Memes</li> -->
       </ul>
     </nav>
     <section class="card" id="playarea">
