--- a/index.html
+++ b/index.html
@@ -35,24 +35,26 @@
         <li class="answer"><button>誰だ？</button></li>
       </ol>
       <div class="card" id="cover-page">
-        <h2>少々お待ちください</h2>
+        <h2>Select a Quiz Type and Hit Start!</h2>
+        <div id="save-score">
+          <p>Enter your initials: </p>
+          <input type="text" placeholder="___">
+        </div>
         <br>
         <p></p>
         <ul id="missed"></ul>
       </div>
     </section>
     <section class="card" id="scoreboard">
+      <h2>Time:</h2>
+      <p id="timer"></p>
+      <br>
       <h2>Score</h2>
       <p id="correct">Correct: </p>
       <p id="wrong">Wrong: </p>
       <p id="skips">Skips: </p>
       <br>
       <p id="high-score">High Score: </p>
-      <br>
-      <h2>Time:</h2>
-      <p id="timer"></p>
-      
-
     </section>
 
   </main>
