Adding CSS comments and cleaning up redundant CSS.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
   
   <header>
-    <h1>Quizzes</h1>
+    <h1>Coding Quizzes</h1>
     <h2>Are an accurate metric of understanding</h2>
-    <h3>how well someone can pick random numbers</h3>
     <button id="start">Start HTML Quiz</button>
   </header>
 
@@ -21,7 +20,6 @@
         <li class="quiz-type" id="html-select">HTML</li>
         <li class="quiz-type" id="css-select">CSS</li>
         <li class="quiz-type" id="js-select">JS</li>
-        <!-- <li class="quiz-type" id="meme-select">Memes</li> -->
       </ul>
     </nav>
     <section class="card" id="playarea">
@@ -47,7 +45,7 @@
     </section>
     <section class="card" id="scoreboard">
       <h2>Time:</h2>
-      <p id="timer"></p>
+      <p id="timer">--</p>
       <br>
       <h2>Score</h2>
       <p id="correct">Correct: </p>
