Increased overall fontsize for readability, changed header text to final form.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <header>
     <h1>Coding Quizzes</h1>
-    <h2>Are an accurate metric of understanding</h2>
+    <h2><em>Time Attack</em></h2>
     <button id="start">Start HTML Quiz</button>
   </header>
 
@@ -50,7 +50,6 @@
       <h2>Score</h2>
       <p id="correct">Correct: </p>
       <p id="wrong">Wrong: </p>
-      <p id="skips">Skips: </p>
       <br>
       <p id="high-score">High Score: </p>
     </section>
